--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -4,17 +4,24 @@ on:
   push:
     branches: master
     tags:
-      - "*"
+      - v*.*.*
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Publish to Registry
+    - name: Publish Release to Registry
       uses: HurricanKai/Publish-Docker-Github-Action@master
       with:
         name: joeyx22lm/docker-github-actions-runner
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tagging: true
+        tag_names: true
+    - name: Publish Latest to Registry
+      uses: HurricanKai/Publish-Docker-Github-Action@master
+      with:
+        name: joeyx22lm/docker-github-actions-runner
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        tag_names: true
