Updated dev docker image tag

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -15,6 +15,6 @@ jobs:
         name: joeyx22lm/docker-github-actions-runner
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tag_names: true
+        tagging: true
       env:
         GITHUB_TAG: alpha
