--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -10,8 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Publish to Registry
-      uses: HurricanKai/Publish-Docker-Github-Action@master
+      uses: manusa/actions-publish-docker@master
       with:
         name: joeyx22lm/docker-github-actions-runner
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        tag: alpha
