--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Publish Release to Registry
-      uses: HurricanKai/Publish-Docker-Github-Action@master
+    - name: Publish to Registry
+      uses: manusa/actions-publish-docker@master
       with:
         name: joeyx22lm/docker-github-actions-runner
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tag_names: true
+        tag: latest
     - name: Publish Latest to Registry
       uses: HurricanKai/Publish-Docker-Github-Action@master
       with:
